# AI-camera

./: README.md
JCPlayer/: CCOpenGLWidget.cpp  CCOpenGLWidget.h  CCYUVDataDefine.h  JCAVCodecHandler.cpp  JCAVCodecHandler.h  JCAudioPlayer.cpp  JCAudioPlayer.h  JCDataDefine.h  JCPlayer.pro  JCPlayer.pro.user.71f56c1  fragment.frag  jcmainwindow.cpp  jcmainwindow.h  jcmainwindow.ui  jcmplayer.qrc  log.txt  main.cpp  vertex.vert
mpp_test/: Makefile  h265_to_mp4.c  yuv_to_h265.c  yuv_to_mp4.c
rknn-cpp-Multithreading-main/: CMakeLists.txt  build-linux_RK3588.sh
rknn-cpp-Multithreading-main/src/: main.cc
